# crudcrate-derive

./: Cargo.toml  README.md
src/: helpers.rs  lib.rs  structs.rs
tests/: integration_tests.rs
