[package]
name = "crudcrate-derive"
version = "0.1.6"
edition = "2021"
description = "Procedural macros to help with CRUD API design using Axum and Sea-ORM in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjt/crudcrate-derive"
keywords = ["crud", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[dependencies]
quote = "1.0.40"
syn = "2.0.101"
proc-macro2 = "1.0.95"

[lib]
proc-macro = true

[workspace]
