[package]
name = "crudcrate-derive"
version = "0.1.6"
edition = "2021"
description = "Procedural macros to help with CRUD API design using Axum and Sea-ORM in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjt/crudcrate-derive"
keywords = ["crud", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[dependencies]
quote = "1.0.40"
syn = "2.0.101"
proc-macro2 = "1.0.95"

[lib]
proc-macro = true

[dev-dependencies]
sea-orm = { version = "1.1.13", features = ["macros", "with-chrono", "with-uuid", "with-json"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.41", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid", "decimal"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
rust_decimal = "1.37.2"
crudcrate = { path = "../crudcrate" }

[workspace]
